kubernetes/microblog-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: microblog
  labels:
    app: microblog
spec:
  selector:
    app: microblog
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
  labels:
    app: microblog
spec:
  selector:
    matchLabels:
      app: microblog
  replicas: 2
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - image: orkanen/microblog:latest
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
        name: microblog
        ports:
        - containerPort: 5000
          name: microblog
        livenessProbe:
          httpGet:
            path: /
            port: 5000
